2007-10-16  Akim Demaille  <akim@lrde.epita.fr>

	No longer export float functions.
	* src/object/float-class.hh: here, since we no longer have
	direct tests on them, they are tested via Urbi.

2007-10-16  Akim Demaille  <akim@lrde.epita.fr>

	dev/ update.
	* ast-clone-visitor-gen: Rename as...
	* ast-cloner-gen: this.
	Update.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	Fix Flex warning.
	* src/parser/utoken.l: Catch stray chars in all start conditions.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	Formatting changes.
	* src/parser/ugrammar.y: here.

2007-10-16  Thomas Moulard  <thomas@moulard.net>

	Fix float implementation.
	* share/urbi/urbi.u: Add Math wrapper.
	* src/object/float-class.cc: Fix implementation.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update tests.
	* tests-local.mk: Adjust.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update test suite.
	* tests-local.mk: now we must specify the directory of the failed
	tests.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Prefer expr to stmt.
	* src/parser/ugrammar.y: The inherits and disinherits keywords
	are now proper binary operators returning expressions.
	So is "class foo { stmts }".

2007-10-15  Akim Demaille  <demaille@gostai.com>

	do.
	* src/ast/ast.yml (Scope::target): New.
	* share/urbi/urbi.u: Use it to declare the String and Float features.
	* src/parser/ugrammar.y, src/parser/utoken.l (TOK_DO): New.
	(do expr { stmts }): Generalization of scope.
	Adjust scope uses.
	* src/runner/runner.cc (Scope): Adjust.
	* tests-local.mk: We no longer pass class-definition.chk which is
	really a stupid test case that we should get rid of.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Sort rules.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Declaration order change.
	* src/parser/ugrammar.y: Here.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Fix arg count check.
	* src/runner/runner.cc: here.