@@ -501,9 +501,11 @@
 %left  "&&"
 %right "^"
 %nonassoc "==" "~=" "%=" "=~=" "!="
-%nonassoc  ">" ">=" "<" "<="
+%nonassoc "<" "<=" ">" ">="
+%left  "<<" ">>"
 %left  "+" "-"
 %left  "*" "/" "%"
+%right "**"
 %right  "!" "++" "--" UNARY     /* Negation--unary minus */
 %left  "("
 %left "."
@@ -1078,7 +1080,7 @@ expr:
   number        { $$ = new ast::Float(@$, $1);        }
 | time_expr     { $$ = new ast::Float(@$, $1);        }
 | "string"      { $$ = new ast::String(@$, take($1)); }
-| "[" exprs "]" { $$ = new ast::List(@$, $2); 	      }
+| "[" exprs "]" { $$ = new ast::List(@$, $2);	      }
 //| "%" name            { $$ = 0; }
 | "group" "identifier"    { $$ = 0; }
 | "new" "identifier" args
